gcloud.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: gcloud
  name: gcloud
  namespace: keda
spec:
  containers:
  - name: gcloud
    image: gcr.io/google.com/cloudsdktool/cloud-sdk:latest
    command:
      - sleep
      - "86400"
  serviceAccountName: keda-operator
