service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations: 
    cloud.google.com/backend-config: '{"ports": {"80":"backendconfig"}}'
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
